syntax = "proto3";
package clientpb;

option java_multiple_files = true;
option java_package = "io.jiache.raft.rpc.client";


service ClientService {
    rpc put(PutRequest) returns (PutResponse) {}
    rpc get(GetRequest) returns (GetResponse) {}
    rpc compaction(CompactionRequest) returns (CompactionResponse) {}
    rpc snapshot(SnapshotRequest) returns (SnapshotResponse) {}
    rpc status(StatusRequest) returns (StatusResponse) {}
}


message GetRequest {
    repeated bytes keys = 1;
}

message GetResponse {
    repeated bytes values = 2;
}

message PutRequest {
    bytes key = 1;
    bytes value = 2;
}

message PutResponse {
}


message CompactionRequest {
    bool physical = 1;
}

message CompactionResponse {
}

message SnapshotRequest {
}

message SnapshotResponse {
}

message StatusRequest {
}

message StatusResponse {
    string leaderURL = 2;
    string leaderIndex = 3;
    uint64 lastLogIndex = 4;
    uint64 lastCommitIndex = 5;
}

